# apple-fm-cli

./: .gitignore  GEMINI.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml  workflow.yml
examples/rag_demo/: README.md  chunking.py  docker-compose.yml  generate_sample_corpus.py  rag_ask.py  rag_experiment.py  rag_ingest.py  requirements.txt
examples/rag_demo/sample_corpus/01_product/: product_briefing.txt
examples/rag_demo/sample_corpus/02_ops/: incidents_q2.csv
examples/rag_demo/sample_corpus/03_people/: remote_work_policy.md
notes/: session_summary_2026_04_22.md
scripts/: benchmark_embeddings.py  run_e2e.sh  validate_similarity.py
src/apple_fm_cli/: __init__.py  cli.py  server.py
src/apple_fm_sdk/: __init__.py  _ctypes_bindings.py  c_helpers.py  content.py  core.py  errors.py  generable.py  generable_utils.py  generation_guide.py  generation_options.py  generation_property.py  generation_schema.py  retrieval.py  session.py  tokenizer.py  tool.py  transcript.py  type_conversion.py
src/apple_fm_sdk/foundation-models-c/: Package.swift
src/apple_fm_sdk/foundation-models-c/Sources/FoundationModelsCBindings/: FoundationModelsCBindings.swift
src/apple_fm_sdk/foundation-models-c/Sources/FoundationModelsCBindings/include/: FoundationModels.h
src/apple_fm_sdk/lib/: libFoundationModels.dylib  libapple_fm_bridge.dylib
tests/: test_e2e.py  test_embeddings.py  test_retrieval.py  test_server.py  test_session_usage.py  test_tools.py
