[project]
name = "apple-fm-cli"
version = "0.2.0"
description = "CLI and OpenAI-compatible HTTP server for Apple Foundation Models (Apple Intelligence)"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Mixed; apple_fm_sdk carries Apple Inc. copyright — see file headers." }
authors = [{ name = "Sohail" }]
keywords = [
    "apple-intelligence",
    "apple-foundation-models",
    "foundation-models",
    "openai-compatible",
    "codex",
    "fastapi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "uvicorn>=0.42.0",
]

[project.urls]
Homepage = "https://github.com/sohail288/apple-fm-cli"
Repository = "https://github.com/sohail288/apple-fm-cli"
Issues = "https://github.com/sohail288/apple-fm-cli/issues"

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/vendor/**",
    "sdk-binary-analyzer/**",
    "src/apple_fm_sdk/foundation-models-c/.build/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/apple_fm_cli", "src/apple_fm_sdk"]
exclude = [
    "**/foundation-models-c/**",
]

[project.scripts]
apple-fm-cli = "apple_fm_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py314"
exclude = ["tests/vendor", "src/apple_fm_sdk/_ctypes_bindings.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ANN", "S", "PT"]
ignore = ["ANN101", "ANN102", "ANN401", "S101"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
exclude = ["tests/vendor", "src/apple_fm_sdk/_ctypes_bindings.py"]

[tool.pytest.ini_options]
norecursedirs = ["tests/vendor"]
markers = [
    "e2e: marks end-to-end tests (select with '-m e2e')"
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.15.8",
]
